added missing trailing path separator to base href

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ auto: true
 permalink: none
 pygments: true
 safe: true
-url: http://christophevg.github.com/themodelfactory.org
+url: http://christophevg.github.com/themodelfactory.org/
